--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,16 +12,7 @@
 <h1>URL Shortener</h1>
 <div class="link-image"><img src="linkimage.png" alt=""> </div>
 
-<form action="/shortlink" method="get">
-  <div class="input-group">
-    <input class="input" type="text" name="link" placeholder="Input URL here">
-    
-    <div class="button">
-      <button  type="submit">Shorten</button>
-    </div>
-  </div>
-
-</form>
+{{{ body }}}
 
 
 </body>
