--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<form action="/shortlink" method="get">
+<form action="/" method="post">
   <div class="input-group">
     <input class="input" type="text" name="link" placeholder="Input URL here">
 
