--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,4 @@
+/* 主畫面*/
 h1  {
 text-align: center;
 
@@ -30,11 +31,9 @@ height: 100%;
 .button {
   margin-top: 10px ;
   text-align: center;
-  
- 
 }
 
-button {
+.button-shortened {
 border-color: rgba(120, 181, 237, 0.947);
   /* border: 3px solid salmon; */
 background-color: transparent;
@@ -44,8 +43,8 @@ border-style: solid;
 
 }
 
-button:hover {
-  background-color: yellow;
+.button-shortened:active {
+  background-color:rgba(44, 137, 224, 0.3);
 }
 
 .err-message {
@@ -59,5 +58,32 @@ border: 5px solid rgba(165, 42, 42, 0.947);
 text-align: center;
 color: brown;
 font-weight: 700;
+}
 
+/* 短網址頁面 */
+h2 {
+  margin-left: 30%;
+  margin-bottom: 0px;
+}
+a {
+  margin-left: 30%;
+  font-size: 20px;
+}
+
+.button-copy-block {
+text-align: center;
+
+}
+
+.button-copy{
+  margin: 10px auto;
+  width: 20%;
+  color: white;
+  background-color: rgb(28, 113, 241);
+  border-style: solid;
+  border-color: rgba(28, 113, 241);
+}
+
+.button-copy:active {
+  background-color: rgba(28, 113, 241,0.7);
 }
