--- a/views/err.hbs
+++ b/views/err.hbs
@@ -3,7 +3,7 @@
     <input class="input" type="text" name="link" placeholder="Input URL here">
 
     <div class="button">
-      <button type="submit">Shorten</button>
+      <button class="button-shortened" type="submit">Shorten</button>
     </div>
   </div>
 
